# florg

./: .gitignore  README.md  build.sh  dev.sh  flake.nix  index.html  license.txt  package-lock.json  package.json  shu.svelte  svelte.config.js  tsconfig.json  vite.config.ts
.github/workflows/: on_push_to_release.yaml
deb-unpack/usr/share/applications/: florg.desktop
florg/: dev.sh  index.html  package.json  tsconfig.json
florg/src/: App.svelte  style.css
florg/src-tauri/: Cargo.toml  tauri.conf.json
florg/src-tauri/src/: mail.rs  main.rs  openai.rs  storage.rs
florg/src/lib/: ChatGPT.svelte  Content.svelte  DateMode.svelte  Footer.svelte  Goto.svelte  GotoMode.svelte  Greet.svelte  Help.svelte  InputWithHistory.svelte  MailListContent.svelte  MailListHeader.svelte  MailMessage.svelte  MailQueries.svelte  NavTable.svelte  Overlay.svelte  PickMode.svelte  Picker.svelte  PickerTable.svelte  QuickPick.svelte  Search.svelte  SearchMode.svelte  TinyNav.svelte  TopTree.svelte  View.svelte  mode_stack.ts  util.ts
florg/src/modes/: ChatGPT.svelte  ChatGPTPicker.svelte  MailMessage.svelte  MailQuery.svelte  Nav.svelte  Node.svelte  NodeSearch.svelte  Palette.svelte
run_release_flake/: flake.nix  result
src/: App.svelte  app.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: mail.rs  main.rs  openai.rs  storage.rs  welcome.florg
src/components/: DateInput.svelte  Focusable.svelte  Goto.svelte  Goto.ts  Help.svelte  InputWithHistory.svelte  Overlay.svelte  Picker.svelte  QuickPick.svelte  Search.svelte  TopTree.svelte  View.svelte
src/lib/: Content.svelte  DateMode.svelte  DatePicker.svelte  Expander.svelte  InputWithHistory.svelte  Overlay.svelte  Picker.svelte  Search.svelte  TopTree.svelte  View.svelte  colors.ts  mode_stack.ts  util.ts
src/modes/: ChatGPT.svelte  MailMessage.svelte  MailQuery.svelte  Nav.svelte  Node.svelte  NodeEdit.svelte  NotFound.svelte  Palette.svelte
src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.server.ts  +page.svelte
src/routes/agenda/[[start_date]]/[[stop_date]]/: +page.svelte  +page.ts
src/routes/chatgpt/: +page.svelte  +page.ts
src/routes/chatgpt/[filename]/: +page.svelte  +page.ts
src/routes/mail/message/[id]/: +page.svelte  +page.ts
src/routes/nav/[[path]]/: +page.svelte  +page.ts
src/routes/node/[[path]]/: +page.svelte  +page.ts  funcs.ts
src/routes/palette/: +page.svelte
src/routes/tree/[[path]]/: +page.svelte  +page.ts  funcs.ts
src/routes/undo/: +page.svelte  +page.ts
src/styles/: tufte.css
static/: style.css
static/styles/: tufte.css
(+4 files in other folders)
