[package]
name = "florg"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["clipboard-all", "devtools", "dialog-all", "http-all", "process-all", "shell-open", "window-create", "window-set-title"] }

xdg="2.4.1"
anyhow="1.0.69"
tempfile = "3.3.0"
walkdir = "2.3.2"
toml = "0.7.2"
once_cell = "1.17.1"
signal-hook = "0.3.15"
inotify = "0.10.0"
sha256 = "1.0.2"
notmuch = "0.8.0"
dirs = "4.0.0"
glob = "0.3.1"
expanduser = "1.2.2"
itertools = "0.10.5"
rdev = "0.5.2" # so we can listen to mouse back button https://github.com/tauri-apps/tauri/issues/5677
gethostname = "0.4.1"
regex = "1.7.3"

[dependencies.toml_edit]
version = "0.13.0"
features = ["serde"]

[dependencies.chrono]
version = "0.4.23"
features = ["serde"]

[dependencies.mail-parser]
version = "0.8.2"
features = ["serde_support"]


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
